# PythonCourses

./: .gitignore  .gitmodules  Makefile  OOP_task.md  PR_explanation.md  PR_explanation_Django.md  PR_explanation_OOP.md  README.rst  before_postgres.md  conf.py  index.html  lesson01.md  lesson02.md  lesson03.md  lesson04.md  lesson05.md  lesson06.md  lesson07.md  lesson08.md  lesson09.md  lesson1.md  lesson10.md  lesson11.md  lesson12.md  lesson13.md  lesson14.md  lesson15.md  lesson16.md  lesson17.md  lesson18.md  lesson19.md  lesson2.md  lesson20.md  lesson21.md  lesson22.md  lesson23.md  lesson24.md  lesson25.md  lesson26.md  lesson27.md  (+44 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst
.github/workflows/: deploy_pages.yml  test-build.yml  test_build.yml
assets/mermaid/: git-cherry-pick.mmd  git-commits.mmd  git-lifecycle.mmd  git-merge-2.mmd  git-rebase-2.mmd  git-states.mmd  gitflow.mmd
assets/mermaid/git/: cherry-pick.mmd  commits.mmd  gitflow.mmd  merge-1.mmd  merge-2.mmd  rebase-1.mmd  rebase-2.mmd
assets/sql/: products.pg13-1.dump.sql
docs/: conf.py  index.txt
mindmaps/: normalization.mmd
src/: conf.js  conf.py  index.txt  refs.bib
src/_static/scss/: presentation-common.scss  presentation-normalization.scss
src/appx/: _keywords.txt  assignments.txt  blog.md  blog.txt  code_edit.txt  conv_store.txt  create_pr.txt  env_path.txt  pg_func_ops.txt  pg_install.txt  pg_local.txt  postgres.txt  precedence.txt  printf.txt  software_list.md  software_list.rst  wrw_game.txt  wtk.txt
src/basics/: bool_logic.txt  controlflow.txt  datatypes.txt  decorators.txt  exceptions.txt  functions.txt  index.txt  modules.txt  pep8.txt  stdtypes.txt  syntax.txt  testing.txt  variables.txt
src/deploy/: index.txt
src/django/: index.txt
src/flask/: index.txt
src/intro/: index.txt  install.txt  interact.txt
src/linux/: index.txt
src/oop/: index.txt  inheritance.txt  intro.txt  patterns.txt  solid.txt
src/pres/normalization/: index.hbs  index.html
src/rdbms/: acid.txt  aggregate.txt  aggregation.txt  datatypes.txt  ddl.txt  dml.txt  functions.txt  index.txt  normalization.txt  products_table.csv  query.txt  relations.txt  structure.txt
src/vcs/: basics.txt  branch.txt  commits.txt  github.txt  index.txt  intro.txt  pullrequest.txt  remotes.txt  setup.txt  tagging.txt
(+78 files in other folders)
