[tool.poetry]
name = "python-course"
version = "2022.11.dev"
description = ""
license = "MIT"
authors = [
    "Vladyslav Ponomaryov",
    "Serhii Horodilov <sgorodil@gmail.com>"
]
maintainers = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
readme = "README.rst"
homepage = ""  # todo:
repository = "https://github.com/edu-python-course/edu-python-course.github.io"
keywords = [
    "python",
    "training",
    "course",
    "education"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Ukrainian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^5.3.0"
sphinx-intl = "^2.0.1"
sphinx-rtd-theme = "^1.1.0"
myst-parser = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
