[tool.poetry]
name = "python-course"
version = "2023.04.dev"
description = ""
license = "MIT"
authors = [
    "Vladyslav Ponomaryov",
    "Serhii Horodilov <sgorodil@gmail.com>"
]
maintainers = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
readme = "README.rst"
homepage = "https://edu-python-course.github.io"
repository = "https://github.com/edu-python-course/edu-python-course.github.io"
keywords = [
    "python",
    "training",
    "course",
    "education"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Ukrainian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^6.1.3"
sphinx-intl = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"
myst-parser = "^1.0.0"
sphinxcontrib-bibtex = "^2.5.0"
sphinxcontrib-mermaid = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
